2007-01-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/itfile_test.cpp, tests/itfile_test_data.it,
	tests/itfile_test.ref: Improved it_file tests

2007-01-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/itfile_test.cpp, tests/itfile_test_data.it,
	tests/itfile_test.ref, tests/Makefile.am: Added test file for a
	binary it_file format. It is supposed to detect wrong endianness
	detection on various platforms.
	(merged rev. 860:863 from the itpp-3-10 branch)

	* itpp/comm/modulator.cpp: Fixed wrong assertion check in QAM
	modulator set_M() function

==============================================================================

2007-01-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.99.0 released (SVN tag: release-3-99-0)

	* Makefile.am: Added missing files to EXTRA_DIST

2007-01-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* ChangeLog-2006: ChangeLog entries from year 2006 moved to a
	separate file

	* doc/local/verification.doc: Updated to include tests under
	Solaris SunOS with ATLAS

2007-01-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Updated to include recent tests
	under Cygwin/Windows XP and Solaris SunOS

2007-01-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Updated to include recent test under
	Gentoo Linux with Intel MKL

2007-01-18  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.h, itpp/comm/ldpc.cpp: Changed one function name
	and updated documentation
	
	* doc/local/verification.doc: Updated 

2007-01-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Updated to reflect recent tests

	* NEWS: Consistancy and language improved. Thanks to Erik for his
	valuable comments.

2007-01-17  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/base/gf2mat.h, itpp/base/gf2mat.cpp, itpp/comm/ldpc.cpp:
	Changed int to bool and vice versa for code portability
